# monnani

./: build.sh  db.sqlite3  pyproject.toml  render.yaml
common/: models.py
config/: settings.py  urls.py
result/: admin.py  models.py  serializers.py  urls.py  views.py
result/migrations/: 0001_initial.py  0002_alter_result_mbti_alter_result_result.py
share/: admin.py  models.py  serializers.py  urls.py  views.py
share/migrations/: 0001_initial.py  0002_alter_share_form_name.py
