[tool.poetry]
name = "monnani"
version = "0.1.0"
description = ""
authors = ["byungyong <quddyddlrk@naver.com>"]
readme = "README.md"
packages = [{include = "monnani"}]

[tool.poetry.dependencies]
python = "^3.11"
django-cors-headers = "^4.2.0"
django = "^4.2.3"
djangorestframework = "^3.14.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.5.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
