[tool.poetry]
name = "monnani-vegi-project"
version = "0.1.0"
description = ""
authors = ["byungyong <quddyddlrk@naver.com>"]
readme = "README.md"
packages = [{include = "monnani_vegi_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django-cors-headers = "^4.2.0"
psycopg2 = "^2.9.6"
djangorestframework = "^3.14.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
django = "^4.2.3"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"